update pack yaml
update pack yaml

--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: 9bd58356-871e-4d06-b78b-ded0449f3ada
+webhook: 26aba0d9-0329-4845-a28f-71cb197e44d7
 
-config_file: 66000067
+config_file: 18
