--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 06baf6b4-8597-4bcf-9338-fc506f3ceb2d
+webhook: 26aba0d9-0329-4845-a28f-71cb197e44d7
 
-config_file: 66000067
+config_file: 18
