--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 26aba0d9-0329-4845-a28f-71cb197e44d7
+webhook: e097b96a-6f14-4130-9634-280612070e85
 
-config_file: 19
+config_file: 66000067
