--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: 26aba0d9-0329-4845-a28f-71cb197e44d7
+webhook: 4f0705bf-3256-4572-9b2d-3a905c8d61c1
 
-config_file: 18
+config_file: 66000082
