--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: b0edc24e-f28b-4abe-8cbd-13ea72253df2
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 66000097
+config_file: 18
