--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: 612845e2-e13f-494d-934a-9e001a1246ab
 
-config_file: 18
+config_file: 66000097
