--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: b731e0ea-5e17-4c4b-876c-e870fe35bc48
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 66000097
+config_file: 18
