--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: a95eea40-73ae-4c3b-9c0c-150a2d8b7c07
 
-config_file: 18
+config_file: 66000098
