--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: bed4a621-ba17-4b3c-a72b-8ceb4765f87a
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 66000067
+config_file: 18
