--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: 6eb6856b-4c16-4ffd-aff1-72ccc8e12fb7
 
-config_file: 18
+config_file: 66000097
