--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: a28bde67-caff-4883-a69e-4c53ee72995f
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 66000111
+config_file: 18
