--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: f2d0229a-d9c7-4bd9-8635-e07a2c218ca6
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 66000082
+config_file: 18
