--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: 0e5fc528-c0ef-4cf8-880b-47647d2cb1d2
 
-config_file: 18
+config_file: 66000059
