--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: f701044b-bee5-4a28-996b-d4368a480b28
 
-config_file: 18
+config_file: 66000082
