--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 3626de2f-be83-4176-a540-edb41894ba9a
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 86000037
+config_file: 18
