--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: 430736af-7d0c-44ba-a5dc-ef4e5e7001f5
 
-config_file: 18
+config_file: 86000037
