--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 8632911a-2dfe-4bb4-936d-da1ef4ede72d
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 86000012
+config_file: 18
