--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: 09face02-037b-406d-99f1-4a3d291b4144
 
-config_file: 18
+config_file: 86000037
