--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 46486e85-be9d-4d2d-a2f6-b257b87a8183
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 86000037
+config_file: 18
