--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: 58d618d8-51f3-4bcd-9e8e-9e0379c6a37e
+webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
 
-config_file: 86000039
+config_file: 19
