--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: d81162c1-d46d-4aec-93c1-b248b6e12f6a
 
-config_file: 19
+config_file: 86000037
