--- a/pack_mac.yaml
+++ b/pack_mac.yaml
@@ -1,3 +1,3 @@
-webhook: d27e6011-f67e-4390-bd73-a19ada0de51b
+webhook: b5303b57-4f4f-4177-8c0c-54bd33f7a8b8
 
-config_file: 18
+config_file: 86000037
