--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 1ebd95e7-57f9-45a0-9957-b03203af1047
+webhook: 491ae827-b5fc-4273-9822-f20dd42d9806
 
-config_file: 86000037
+config_file: 19
