--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 491ae827-b5fc-4273-9822-f20dd42d9806
+webhook: 80157a80-d218-46b3-8a28-e340d0d5293e
 
-config_file: 19
+config_file: 86000037
