--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 5db6fe35-9802-478c-8897-70eb26af1721
+webhook: 769d4449-d786-4f96-9ad8-69a8ee787452
 
-config_file: 86000037
+config_file: 18
