--- a/pack_windows.yaml
+++ b/pack_windows.yaml
@@ -1,3 +1,3 @@
-webhook: 769d4449-d786-4f96-9ad8-69a8ee787452
+webhook: dc472601-c620-4cbc-a3eb-fd4f5950927e
 
-config_file: 18
+config_file: 86000037
